--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -36,10 +36,10 @@ track a target, and the distance measurement will be used to accurately use the
 formula for projectile motion described in \autoref{ProjMotion} to hit the
 target. These features are implemented using two different sensors. The camera
 sensor is presented and tested below in \autoref{SensorTheory} and the distance
-sensor in \autoref{}.
+sensor in \autoref{SensTheoUltra}.
 
-\input{sections/Sensors/sensorTheory.tex}
-\input{sections/Sensors/SensorTest.tex}
+\input{sections/Sensors/Ultrasonic.tex}
+\input{sections/Sensors/Camera.tex}
 
 % \input{sections/Sensors/SensorUltrasonicTheory.tex}
 % \input{sections/Sensors/SensorUltrasonicTest.tex}
