--- a/sections/Design/TargetDesign.tex
+++ b/sections/Design/TargetDesign.tex
@@ -8,7 +8,9 @@ Both a flat and ylindrical design for the target has been considered. The flat
 design is good since it is easy to make wider. \fix{The cylindrical design
 should in theory counteract the problem with the ultrasonic sensors needing to be pointed
 perpendicular at the target, due to the fact that the angle is the same all
-around the target.}{dont know if this is even true or relevant}
+around the target.}{dont know if this is even true or relevant}\nl
+
+The target is mounted on a "car" that moves forward at a constant speed. 
 
 
 
