--- a/sections/Design/Design.tex
+++ b/sections/Design/Design.tex
@@ -1,7 +1,7 @@
 \chapter{Design}
 In this chapter the the thoughts that went into the design will be discussed and
-the final design will be presented. The design of the target will also be
-described.
+the final design will be presented. The parts that go into the design of the
+target will also be also be discussed.
 
 \input{sections/Design/TurretDesign.tex}
 \input{sections/Design/TargetDesign.tex}
