--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -13,13 +13,14 @@ due to the fact that it is hard to make it able to reload itself, which would
 mean that it would only be able to fire a single shot. This was deemed as a
 major flaw since if it missed it would not be able to try again. Another design
 considered utilizes the same principle as a football launcher, where two wheels
-are spinning in opposite directions. This design was not realised due to the
-fact that we did not have acces to motors powerfull enough to deliver the
-necessary power for the mechanism to have momentum enough to shoot. The final
-design considered uses a piston that pushes the projectile trough a mouth piece
-that clamps around it to apply force to the projectile. This design is the
-design we went with due to the fact that it has a sufficient amount of power and
-it is easily reloadable.\nl
+placed side by side are spinning in opposite directions and a projectile is
+pushed through.
+This design was not realised due to the fact that we did not have acces to motors
+powerfull enough to deliver the necessary power for the mechanism to have
+momentum enough to shoot. The final design considered uses a piston that pushes
+the projectile trough a mouth piece that clamps around it to apply force to the
+projectile. This design is the design we went with due to the fact that it has
+a sufficient amount of power and it is easily reloadable.\nl
 
 The shooting mechanism is mounted on a mechanism that is used to angle the
 shooting mechanism to make it able to shoot a target at varying distances. This
@@ -95,5 +96,6 @@ that the shooting mechanism is mounted on. These two parts sit on top of a
 base where the NXT is mounted inside to distribute the weight and to make it
 shorter. On the front of this bas two ultrasonic sensor placed in order to make
 \name able to track and measure distance to a target. All of this sits on a
-rotating mechanism where the motor is placed on the outside of the turret with
-a gear connected to the rotator. This Can be seen in \autoref{}
+turning mechanism. A motor placed on the outside of the
+turret with a gear connected to the turning mechanism makes the whole turret
+turn. This is seen in \autoref{}
