--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -96,6 +96,6 @@ that the shooting mechanism is mounted on. These two parts sit on top of a
 base where the NXT is mounted inside to distribute the weight and to make it
 shorter. On the front of this bas two ultrasonic sensor placed in order to make
 \name able to track and measure distance to a target. All of this sits on a
-turning mechanism. A motor placed on the outside of the
-turret with a gear connected to the turning mechanism makes the whole turret
-turn. This is seen in \autoref{}
+turning mechanism. A motor is placed on the outside of the
+turret with a gear connected to the turning mechanism to make the whole turret
+turn. This design is seen in \autoref{}
