--- a/sections/Sensors/Ultrasonic.tex
+++ b/sections/Sensors/Ultrasonic.tex
@@ -60,7 +60,7 @@ turret.\nl
 % as a part of the initial turret design, it does not include any formalized data
 % sets. As such, these were the conclusions which could be drawn:\nl
 
-\subsubsection{Using Blinders}
+\subsubsection{\fix{Using Blinders}{Skal vi rent faktisk bruge dem?}}
 At first when testing the ultrasonic sensors, it was determined that the
 sensor's ability to accurately measure the distance was subject to interferance
 by the surroundings. In effect this vastly reduced the maximum distance of the
