--- a/sections/Design/TargetDesign.tex
+++ b/sections/Design/TargetDesign.tex
@@ -5,10 +5,11 @@ oranges gives to many false positives and therefore red was chosen as the target
 colour since it performed second best in the camera test.\nl
 
 Both a flat and ylindrical design for the target has been considered. The flat
-design is good since it is easy to make wider. \fix{The cylindrical design
+design is good since it is easy to make wider. The cylindrical design
 should in theory counteract the problem with the ultrasonic sensors needing to be pointed
 perpendicular at the target, due to the fact that the angle is the same all
-around the target.}{dont know if this is even true or relevant}\nl
+around the target. The cylindrical design also ensures that the camera always
+sees the target as the same size.\nl
 
 The target is mounted on a "car" that moves forward at a constant speed. 
 
