--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -43,24 +43,27 @@ which med it more unstable.\nl
 In the chosen design where the NXT is laying on the back inside the turret the
 I/O ports are fully accessible. This design also makes the turret a lot shorter
 and distributes the weight which makes the turret more stable. 
+
 \subsection{Sensor Placement}
 The sensor are a vital part of the turret and need to placed in such a way that
 the results from the sensors are as good as possible. As the tests described in
 \autoref{UltraTestPlacement} states, it is important that the sensor is not
 placed to close to the ground due to the fact that it interferes with the
-soundwaves.\nl
+soundwaves. This makes the results unprecise and can potentially make the
+turret not able to hit a target.\nl
 
 The final design makes use of two ultrasonic sensors placed side by side since
-it was determined that the field of view would be to narrow with only one
+it was determined that the field of view would be too narrow with only one
 sensor. This is due to the fact that the ultrasonic sensor needs to be pointed
 almost perpendicular at the target in order to catch the soundwaves that bounces
-back. The use of two sensor brings up the problem of interference between the
-two sensors but that was solved by alternating between turning on and off aech
-sensor.\nl
+back. The use of two sensors brings up the problem of interference between the
+two sensors but that was solved by alternating between turning on and off each
+sensor so that when when one sensor is on the other one is off and vice
+versa.\nl
 
 \name also makes use of a camera to track a target. This camera is mounted on
-the front of the base in the middle. This is beause if it was not placed in the
-middle the turret's aim would be off.
+the front of the base in the middle. This is because if it was not placed in the
+middle the turret would not aim for the middle of the target.
 
 \subsection{Turning Mechanism}
 The turret needs to be able to turn in order to be able to track a moving
@@ -79,9 +82,9 @@ Another design considered was where the motor was placed inside the base of the
 turret and connected directly to the gear that makes the turret turn. This
 design does not have the problem of the cable limiting how much the turret can
 turn, since the motor is located on the the turret and therefore turns with the
-NXT. This design does have a flaw, that is that it overturn whenever it needs to
-stop. This means that the turret is not very precise which makes it difficult to
-hit a target.\nl
+NXT. This design does have a flaw, that is that it overturns whenever it needs
+to stop. This means that the turret is not very precise which makes it difficult to
+aim correctly.\nl
 
 The chosen design is similar to the design with the turret directly connected to
 the gear that turns the turret, the difference being that the motor is placed on
