--- a/sections/Design/TurretDesign.tex
+++ b/sections/Design/TurretDesign.tex
@@ -63,7 +63,9 @@ versa.\nl
 
 \name also makes use of a camera to track a target. This camera is mounted on
 the front of the base in the middle. This is because if it was not placed in the
-middle the turret would not aim for the middle of the target.
+middle the turret would not aim for the middle of the target. This camera is
+calibrated to track the colour red, as this is the colour that the camera
+regognizes the most based on the tests in \autoref{CamTest}.
 
 \subsection{Turning Mechanism}
 The turret needs to be able to turn in order to be able to track a moving
