--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -228,10 +228,12 @@ move into a proper position, and the shot itself has a certain travel time. All
 of this leads to a system which uses bounded rationality.
 
 \subsection{Belief Network}
+
+
 Since the agent can only partially observe the states it will need to be able to
 reason under uncertainty. A belief network is a way to do this. It is an acyclic
 directed graph consisting of random variables and a set of conditional
-probalility distributions. This an be used to model a dynamic system by
+probalility distributions. This is used to model a dynamic system by
 treating a feature at a given time as a random variable, which is the idea
 behind Markov chains. A markov chain is a special belief network that
 represents sequences of values. In a markov chain at state $S_t$ the future is
